bad/if_cond_int.example_compiler_output
ERROR
[1mbad/if_cond_int.lat:3:6: [1;31merror: [0;1mif condition has to be of type `boolean`, not `int`[m
	if (42) {}
	    [1;32m^[m
